--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   flutter:
     sdk: flutter
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   mockito:
@@ -40,12 +41,17 @@ dev_dependencies:
   build_runner: # generate dart files
   hive_generator: # generate hive files
   retrofit_generator:
+  freezed_annotation: ^2.4.1
+  json_serializable:
   integration_test:
     sdk: flutter
+  freezed: ^2.4.1
 
   flutter_test:
     sdk: flutter
-
+dependency_overrides:
+  collection:
+  analyzer:
 flutter_icons:
   android: true
   ios: true
