--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
     sdk: flutter
   json_annotation: ^4.8.1
   confirm_dialog: ^1.0.2
+  in_app_purchase_android: ^0.3.0+10
+  in_app_purchase: ^3.1.7
 
 dev_dependencies:
   mockito:
@@ -44,6 +46,7 @@ dev_dependencies:
   retrofit_generator:
   freezed_annotation: ^2.4.1
   json_serializable:
+  package_rename: ^1.3.3
   integration_test:
     sdk: flutter
   freezed: ^2.4.1
@@ -84,3 +87,7 @@ flutter:
           weight: 500
         - asset: assets/fonts/Cairo-SemiBold.ttf
           weight: 900
+package_rename_config:
+  android:
+    app_name: Banko Team
+    package_name: bt.com.banko_team 
